          hard coding use of uflEduUniversityId
        - Use uflEduPsDeptId instead of uflEduUniversityId for units,
          since that's now part of the DN
        - When searching for people in a unit, and only one person
          exists in the unit, redirect correctly to that person
        - Add trailing slash via uri_for instead of in HTML

0.18  Tue Aug  1 17:49:04 EDT 2006
        - Fix searches which include a middle name
        - Display title and unit for students
        - 404 on an invalid ACTION in /people/ENCODED_UFID/ACTION/
        - 404 on /people/UFID/
        - Remove vCard view; instead use a new TT wrapper
        - Improve URL generation in Phonebook::Controller::Search
        - Redirect from /people/ and /units/ to /
        - Refactor old application redirect handling into
          Phonebook::Controller::People
        - Hide unit if person is in REGISTRAR STUDENTS
        - Change "people in unit" URLs to be /units/UFID/people/
          instead of /people/unit/UFID/
        - Fix query tokenization to parse "last,first m" into (last
          first m)

0.17  Wed Apr  5 18:03:04 EDT 2006
        - Refactor organization name to configuration file
        - Remove escaping in root/people/vcard.tt even though RFC 2426
          implies that it's necessary, because it causes problems in
          Outlook
        - Add a few more items to the vCard

0.16  Fri Mar 10 19:27:16 EST 2006
        - Refactor search.js for more sensible default value storage

0.15  Thu Mar  9 20:08:38 EST 2006
        - Change search.js to activate the form onfocus instead of
          onclick

0.14  Thu Feb 16 01:06:45 EST 2006
        - Fix source selection JavaScript
        - Make secondary page search form behave like index search form

0.13  Wed Feb 15 23:47:50 EST 2006
        - Move CSS up one directory to simplify image references

0.12  Wed Feb 15 20:29:38 EST 2006
        - Pull JavaScript from search.ufl.edu

0.11  Tue Feb 14 16:35:49 EST 2006