@@ -11,6 +11,8 @@ This file documents the revision history for Phonebook.
         - When searching for people in a unit, and only one person
           exists in the unit, redirect correctly to that person
         - Add trailing slash via uri_for instead of in HTML
+        - Redirect unit URLs using the department UFID to the
+          corresponsing URL using the PeopleSoft department ID
 
 0.18  Tue Aug  1 17:49:04 EDT 2006
         - Fix searches which include a middle name
